# whatsapp-chatbot

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CI-CD.md  Dockerfile  LICENSE  PROMPT.md  README.md  Untitled.ipynb  alembic.ini  chat-ai.py  doc.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-ec2.yml  deploy-lightsail.yml  deploy.yml  test.yml
app/: __main__.py  context.py  main.py
app/adapters/: __init__.py  telegram.py
app/agent/: __init__.py  action_executor.py  agent.py  agent_professional.py  chat_flow.py  flow.json  flow.toml
app/agent/flows/: faq.toml  feedback.toml  paciente.toml  profissional_rede.toml  selecao_profissional.toml  start.toml
app/bot/: __init__.py  bot.py  telegram_bot.py
app/channel_adapters/: telegram.py  whatsapp.py
app/chat/: __init__.py  repository.py  service.py
app/config/: __init__.py  infra.py  logger.py  settings.py
app/controllers/: __init__.py  health_controller.py  send_message_controller.py  upload_media_controller.py  whatsapp_controller.py
app/core/: config.py
app/db/: __init__.py
app/domain/: chat.py  message.py  patient.py  patient_stage.py  person.py  professional.py  professional_stage.py
app/domain/db/: __init__.py  base.py  message_history.py  patient_model.py  (+7 more)
app/ia/: __init__.py
app/message_queue/: __init__.py  message_queue.py  models.py
app/messaging/: __init__.py  dispatcher.py  receiver.py
app/models/: __init__.py
app/queue/: message_queue.py
app/repository/: patient_repository.py  patient_stage_repository.py  person_repository.py  professional_repository.py  professional_stage_repository.py  redis_repository.py
app/runners/: telegram_runner.py  whatsapp_runner.py
app/services/: dispatcher_service.py  google_sheets_service.py  receiver_service.py  s3_media_service.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_baseline_schema.py  0002_align_schema_with_models.py  0003_add_chat_state_enum_and_remove_professional_status_id.py  0004_add_patient_request_history.py  0ce13cc54fd7_add_chat_mode_field_to_person.py
scripts/: check_status_aws_account.bash  create_ecr_repositories.bash  schema.sql  setup_postgres.bash  test_doubt_flow.sh  test_doubt_flow_local.py
scripts/policy/: github_actions_policy.json
tests/: test_health.py
tests/agent/: test_action_executor.py  test_agent_worker.py  test_chat_flow.py
tests/channel_adapters/: test_telegram.py  test_whatsapp.py
tests/config/: test_settings.py
tests/controllers/: test_health.py  test_send_message.py  test_upload_media.py  test_whatsapp.py
tests/db/: conftest.py  test_patient_repository.py  test_person_repository.py  test_professional_repository.py
tests/runners/: __init__.py  test_telegram.py  test_whatsapp.py
tests/services/: test_dispatcher.py  test_receiver.py
(+9 files in other folders)
